[gd_scene load_steps=7 format=3 uid="uid://dojjcw8633wvn"]

[ext_resource type="PackedScene" uid="uid://drpx64vwtj8ty" path="res://game/towers/_base/tower_base.tscn" id="1_nu5na"]
[ext_resource type="Script" path="res://game/towers/sea_urchin/sea_urchin.gd" id="2_oo1nm"]
[ext_resource type="PackedScene" uid="uid://8vi27lucbb6v" path="res://assets/models/towers/Seeigel/Seeigel.gltf" id="4_rxdcw"]
[ext_resource type="PackedScene" uid="uid://c2ocwx4wxj1q6" path="res://game/components/healthbar_component.tscn" id="4_yxmsc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ml77c"]

[sub_resource type="SphereShape3D" id="SphereShape3D_71ui3"]
radius = 3.5

[node name="SeaUrchin" instance=ExtResource("1_nu5na")]
script = ExtResource("2_oo1nm")
damage = 3.0
interval = 4.0
max_health = 50.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_ml77c")

[node name="DamageArea" type="Area3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea" index="0"]
shape = SubResource("SphereShape3D_71ui3")

[node name="DamageTimer" type="Timer" parent="DamageArea" index="1"]
unique_name_in_owner = true
wait_time = 2.0

[node name="Healthbar" parent="." index="2" instance=ExtResource("4_yxmsc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Pivot" type="Node3D" parent="." index="3"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Model" parent="Pivot" index="0" instance=ExtResource("4_rxdcw")]
unique_name_in_owner = true

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="timeout" from="DamageArea/DamageTimer" to="." method="_on_damage_timer_timeout"]
